--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-99907893-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-99907893-3',{
+          'page_path': window.location.href
+      });
+</script>
     <title>Audio Visualizer</title>
   </head>
   <body>
