--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-99907893-3',{
-          'page_path': window.location.href
+          'page_path': 'https://audio.devaman.dev/'
       });
 </script>
     <title>Audio Visualizer</title>
