--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         </div>
       </div>
     <div class="config">
+        <h1>Configure the Audio Board</h1>
         <div>
-            <label for="upload_audio">Upload audio / video (mp4)</label>
+            <label for="upload_audio">Upload audio / video</label>
             <input id="upload_audio" type="file"/>
         </div>
         <div>
@@ -35,7 +36,7 @@
             <input type="file" id="upload_bg" placeholder="bg"/>
         </div>
         <div>
-          <label for="upload_logo">Upload logo (256*256)</label>
+          <label for="upload_logo">Upload logo</label>
           <input type="file" id="upload_logo" placeholder="logo"/>
         </div>
         <div>
