--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="config">
         <h1>Configure the Audio Board</h1>
         <div>
-            <label for="upload_audio">Upload audio / video</label>
-            <input id="upload_audio" type="file"/>
+            <label for="upload_audio">Mic Audio</label>
+            <button id="upload_audio">Start</button>
         </div>
         <div>
             <label for="upload_bg">Upload background Image/ video</label>
