added beat detection

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 
           </select>
         </div>
+        <div>
+          <label for="stroke_color">Beat Detection</label>
+          <select onchange="setBeatDetection(event);">
+            <option selected="selected" value="false">False</option>
+            <option value="true">True</option>
+          </select>
+        </div>
         <br>
         <h3>Below config will be set after re-uploading of audio</h3>
         <div>
