--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div>
           <label for="stroke_color">Select stroke color</label>
-          <input type="color" id="stroke_color">
+          <input type="color" id="stroke_color" value="#000000">
         </div>
         <div>
           <label for="stroke_color">Radius</label>
