--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
             <option value="true">True</option>
           </select>
         </div>
+        <div>
+          <label for="stroke_color">Bounce Multiplier (1-100)</label>
+          <input type="number" value="50" onchange="setBounceMultiplier(event);">
+        </div>
+        <div>
+          <label for="stroke_color">Show Particles</label>
+          <select onchange="setShowParticles(event);">
+            <option selected="selected" value="true">True</option>
+            <option value="false">False</option>
+          </select>
+        </div>
         <br>
         <h3>Below config will be set after re-uploading of audio</h3>
         <div>
