Updated to match the main branch of original

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
           <label for="stroke_color">Select stroke color</label>
           <input type="color" id="stroke_color">
         </div>
+        <div>
+          <label for="display_num">Select display mode</label>
+          <input type="number" id="display_num" value="8">
+        </div>
     </div>
 
     <script src="script.js"></script>
