--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <body>
       <div id="container">
         <canvas id="canvas"></canvas>
-        <img class="logo_img" width="256" height="256">
         <div id="container-config">
           <audio controls id="audio">
             Your browser does not support the audio element.
@@ -29,8 +28,10 @@
     <div class="config">
         <h1>Configure the Audio Board</h1>
         <div>
-            <label for="upload_audio">Mic Audio</label>
-            <button id="upload_audio">Start</button>
+            <label for="upload_audio">Upload audio / video</label>
+            <input id="upload_audio" onchange="upload_audio(event,true);" type="file"/>
+            OR
+            <button onclick="upload_audio(event);">Mic Audio</button>
         </div>
         <div>
             <label for="upload_bg">Upload background Image/ video</label>
@@ -45,8 +46,42 @@
           <input type="color" id="stroke_color">
         </div>
         <div>
-          <label for="display_num">Select display mode</label>
-          <input type="number" id="display_num" value="8">
+          <label for="stroke_color">Radius</label>
+          <input type="number" value="128" onchange="radiusChange(event);">
+        </div>
+        <div>
+          <label for="stroke_color">Display Template</label>
+          <select onchange="displayChange(event);">
+            <option selected="selected" value="0">Radial Lines</option>
+            <option value="1">Radial Smooth</option>
+            <option value="2">Top Lines</option>
+            <option value="3">Top Smooth</option>
+            <option value="4">Sound Wave</option>
+            <option value="5">Darken</option>
+            <option value="6">Radial Blob</option>
+            <option value="7">Radial Dots</option>
+            <option value="8">Radial Dots (Multiple)</option>
+            <option value="9">Horizontal Blob</option>
+            <option value="10">Double Sided Lines</option>
+
+          </select>
+        </div>
+        <div>
+          <label for="stroke_color">Beat Detection</label>
+          <select onchange="setBeatDetection(event);">
+            <option selected="selected" value="false">False</option>
+            <option value="true">True</option>
+          </select>
+        </div>
+        <br>
+        <h3>Below config will be set after re-uploading of audio</h3>
+        <div>
+          <label for="stroke_color">FFT size( power of 2 (between 2^5-2^15))</label>
+          <input type="number" value="16384" onchange="setFFTSize(event);">
+        </div>
+        <div>
+          <label for="stroke_color">BufferLength(min than fftsize)</label>
+          <input type="number" value="128" onchange="setBufferLength(event);">
         </div>
     </div>
 
