BootLegAidan added new patterns

--- a/index.html
+++ b/index.html
@@ -52,10 +52,17 @@
         <div>
           <label for="stroke_color">Display Template</label>
           <select onchange="displayChange(event);">
-            <option selected="selected" value="0">Type 0</option>
-            <option value="1">Type 1</option>
-            <option value="2">Type 2</option>
-            <option value="3">Type 3</option>
+            <option selected="selected" value="0">Radial Lines</option>
+            <option value="1">Radial Smooth</option>
+            <option value="2">Top Lines</option>
+            <option value="3">Top Smooth</option>
+            <option value="4">Sound Wave</option>
+            <option value="5">Darken</option>
+            <option value="6">Radial Blob</option>
+            <option value="7">Radial Dots</option>
+            <option value="8">Radial Dots (Multiple)</option>
+            <option value="9">Horizontal Blob</option>
+            <option value="10">Double Sided Lines</option>
 
           </select>
         </div>
