beat detect on by default

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <div>
           <label for="stroke_color">Beat Detection</label>
           <select onchange="setBeatDetection(event);">
-            <option selected="selected" value="false">False</option>
-            <option value="true">True</option>
+            <option value="false">False</option>
+            <option selected="selected" value="true">True</option>
           </select>
         </div>
         <div>
