Added mirror radial patterns

--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
           <select onchange="displayChange(event);">
             <option selected="selected" value="0">Radial Lines</option>
             <option value="1">Radial Smooth</option>
+            <option value="11">Mirror Radial Line</option>
+            <option value="12">Mirror Radial Smooth</option>
+            <option value="6">Radial Blob</option>
+            <option value="7">Radial Dots</option>
+            <option value="8">Radial Dots (Multiple)</option>
             <option value="2">Top Lines</option>
             <option value="3">Top Smooth</option>
             <option value="4">Sound Wave</option>
             <option value="5">Darken</option>
-            <option value="6">Radial Blob</option>
-            <option value="7">Radial Dots</option>
-            <option value="8">Radial Dots (Multiple)</option>
             <option value="9">Horizontal Blob</option>
             <option value="10">Double Sided Lines</option>
 
@@ -75,7 +77,7 @@
         </div>
         <div>
           <label for="stroke_color">Bounce Multiplier (1-100)</label>
-          <input type="number" value="300" onchange="setBounceMultiplier(event);">
+          <input type="number" value="200" onchange="setBounceMultiplier(event);">
         </div>
         <div>
           <label for="stroke_color">Show Particles</label>
