default changed to mirror line

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <div>
           <label for="stroke_color">Display Template</label>
           <select onchange="displayChange(event);">
-            <option selected="selected" value="0">Radial Lines</option>
+            <option  value="0">Radial Lines</option>
             <option value="1">Radial Smooth</option>
-            <option value="11">Mirror Radial Line</option>
+            <option selected="selected" value="11">Mirror Radial Line</option>
             <option value="12">Mirror Radial Smooth</option>
             <option value="6">Radial Blob</option>
             <option value="7">Radial Dots</option>
@@ -77,7 +77,7 @@
         </div>
         <div>
           <label for="stroke_color">Bounce Multiplier (1-100)</label>
-          <input type="number" value="200" onchange="setBounceMultiplier(event);">
+          <input type="number" value="250" onchange="setBounceMultiplier(event);">
         </div>
         <div>
           <label for="stroke_color">Show Particles</label>
